# wstsound

./: .gitlab-ci.yml  CMakeLists.txt  flake.nix  guix.scm  wstsound-config.cmake.in  wstsound.nix
extra/: openal_info.cpp  sound_cat.cpp  sound_info.cpp  sound_play.cpp  soundapp.cpp  wstsound-openal.cpp  wstsound-play.cpp  wstsoundfile-cat.cpp  wstsoundfile-info.cpp
include/wstsound/: effect.hpp  effect_slot.hpp  filter.hpp  filtered_sound_file.hpp  fwd.hpp  listener.hpp  ogg_sound_file.hpp  openal_context.hpp  openal_device.hpp  openal_loopback_device.hpp  openal_sound_source.hpp  openal_system.hpp  opus_sound_file.hpp  procedural_sound_file.hpp  sound_channel.hpp  sound_error.hpp  sound_file.hpp  sound_format.hpp  sound_manager.hpp  sound_source.hpp  sound_source_ptr.hpp  sound_source_type.hpp  wav_sound_file.hpp
src/: dummy_sound_source.hpp  effect.cpp  effect_slot.cpp  filter.cpp  filtered_sound_file.cpp  listener.cpp  modplug_sound_file.cpp  modplug_sound_file.hpp  mp3_sound_file.cpp  mp3_sound_file.hpp  ogg_sound_file.cpp  openal_buffer.hpp  openal_device.cpp  openal_device.hpp  openal_loopback_device.cpp  openal_loopback_device.hpp  openal_real_device.cpp  openal_real_device.hpp  openal_sound_source.cpp  openal_sound_source.hpp  openal_system.cpp  opus_sound_file.cpp  procedural_sound_file.cpp  sound_channel.cpp  sound_error.cpp  sound_file.cpp  sound_format.cpp  sound_manager.cpp  sound_source.cpp  static_sound_source.cpp  static_sound_source.hpp  stream_sound_source.cpp  stream_sound_source.hpp  wav_sound_file.cpp
src/sound/: dummy_sound_source.hpp  filtered_sound_file.cpp  filtered_sound_file.hpp  ogg_sound_file.cpp  ogg_sound_file.hpp  openal_sound_source.cpp  openal_sound_source.hpp  openal_system.cpp  openal_system.hpp  opus_sound_file.cpp  opus_sound_file.hpp  procedural_sound_file.cpp  procedural_sound_file.hpp  sound_channel.cpp  sound_channel.hpp  sound_file.cpp  sound_file.hpp  sound_manager.cpp  sound_manager.hpp  sound_source.hpp  sound_source_type.hpp  static_sound_source.cpp  static_sound_source.hpp  stream_sound_source.cpp  stream_sound_source.hpp  wav_sound_file.cpp  wav_sound_file.hpp
test/: sound_file_test.cpp  sound_source_test.cpp
test/data/: left.opus  right.opus  sound.opus
